# gp_api

./: .env  Dockerfile  UserManagerMMethods  alembic.ini  commands  docker-compose.yml  dockerfile  init_db.py  main.py  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 717aa545e4b2_initial.py  a383bbbb8341_add_test_column.py  ad116cc53429_remove_test_column.py  f6383f14a121_remove_test_column_again.py
app/: app.py
app/db/: models.py  schemas.py
core/: auth.py  security.py
db/: models.py  schemas.py
dependencies/: helper.py  permissions.py
routes/: admin.py  mechanics.py  ratings.py  requests.py  tracking.py  users.py
services/: distance.py  email.py  maps.py  recommendor.py  webscoket_manager.py  weights.py
